fixed image squish:  width and min height

--- a/assets/css/set2.css
+++ b/assets/css/set2.css
@@ -21,9 +21,7 @@
 .grid figure img {
 	position: relative;
 	display: block;
-	min-height: 100%;
 	opacity: 1;
-	width: 100%;
 }
 
 .grid figure figcaption {
